--- a/index.html
+++ b/index.html
@@ -1421,7 +1421,7 @@
 
             #header {
                 margin: 0;
-                height:80px;
+                height: 80px;
             }
 
             #header .top_left {
@@ -1429,7 +1429,6 @@
                 border-bottom: 1px solid #eaeaea;
             }
 
-            /* header */
             #header .top_wrap {
                 width: 100%;
             }
@@ -1524,7 +1523,6 @@
                 padding: 20px;
                 color: #fff;
                 background-color: #1D326C;
-
             }
 
             #header .nav .gnb .menu_title li {
@@ -1554,7 +1552,6 @@
                 <li><a href="#">기업 사이트</a></li>
             </ul>
             <div class="top_wrap selTo">
-                <!-- <div class="topmenu toggle"> -->
                 <div class="top_right selTo ">
                     <ul>
                         <li><a href="#">로그인</a></li>
@@ -1575,59 +1572,58 @@
                         </li>
                     </ul>
                 </div>
-                <!-- </div> -->
-                <div class="nav selTo ">
-                    <!-- <h1 class="screen_out">메인 로고</h1> -->
-                    <div class="logo">
-                        <a href="index.html">
-                            <img src="img/top_logo.gif" alt="logo">
-                        </a>
-                    </div>
-                    <!-- GNB MENU -->
-                    <ul class="gnb selTo ">
-                        <!-- <h2 class="screen_out">이디야 메인 메뉴</h2> -->
-                        <li class="menu_title"><a href="#"><span>메뉴</span></a>
-                            <ul>
-                                <li><a href="#">음료</a></li>
-                                <li><a href="bakery.html">베이커리</a></li>
-                                <li><a href="#">이디야 스낵</a></li>
-                                <li><a href="#">MD</a></li>
-                                <li><a href="#">비니스트</a></li>
-                                <li><a href="bean.html">원두</a></li>
-                            </ul>
-                        </li>
-                        <li class="menu_title"><a href="#"><span>이디야멤버스</span></a>
-                            <ul>
-                                <li><a href="#">멤버스 소개</a></li>
-                                <li><a href="#">이디야카드</a></li>
-                                <li><a href="#">선물하기</a></li>
-                                <li><a href="#">이디야오더</a></li>
-                                <li><a href="#">FAQ</a></li>
-                            </ul>
-                        </li>
-                        <li class="menu_title"><a href="#"><span>이디야커피랩</span></a>
-                            <ul>
-                                <li><a href="#">이디야커피랩</a></li>
-                                <li><a href="#">이디야커피랩 메뉴</a></li>
-                            </ul>
-                        </li>
-                        <li class="menu_title"><a href="#"><span>이디야컬쳐랩</span></a>
-                            <ul>
-                                <li><a href="musicfesta.html">뮤직페스타</a></li>
-                                <li><a href="#">프로그램 및 시설 안내</a></li>
-                            </ul>
-                        </li>
-                        <li class="menu_title"><a href="#"><span>이디야 소식</span></a>
-                            <ul>
-                                <li><a href="#">공지사항</a></li>
-                                <li><a href="#">이벤트</a></li>
-                            </ul>
-                        </li>
-                    </ul>
+            </div>
+            <div class="nav selTo ">
+                <h1 class="screen_out">메인 로고</h1>
+                <div class="logo">
+                    <a href="index.html">
+                        <img src="img/top_logo.gif" alt="logo">
+                    </a>
                 </div>
+                <!-- GNB MENU -->
+                <ul class="gnb selTo ">
+                    <h2 class="screen_out">이디야 메인 메뉴</h2>
+                    <li class="menu_title"><a href="#"><span>메뉴</span></a>
+                        <ul>
+                            <li><a href="#">음료</a></li>
+                            <li><a href="bakery.html">베이커리</a></li>
+                            <li><a href="#">이디야 스낵</a></li>
+                            <li><a href="#">MD</a></li>
+                            <li><a href="#">비니스트</a></li>
+                            <li><a href="bean.html">원두</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu_title"><a href="#"><span>이디야멤버스</span></a>
+                        <ul>
+                            <li><a href="#">멤버스 소개</a></li>
+                            <li><a href="#">이디야카드</a></li>
+                            <li><a href="#">선물하기</a></li>
+                            <li><a href="#">이디야오더</a></li>
+                            <li><a href="#">FAQ</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu_title"><a href="#"><span>이디야커피랩</span></a>
+                        <ul>
+                            <li><a href="#">이디야커피랩</a></li>
+                            <li><a href="#">이디야커피랩 메뉴</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu_title"><a href="#"><span>이디야컬쳐랩</span></a>
+                        <ul>
+                            <li><a href="musicfesta.html">뮤직페스타</a></li>
+                            <li><a href="#">프로그램 및 시설 안내</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu_title"><a href="#"><span>이디야 소식</span></a>
+                        <ul>
+                            <li><a href="#">공지사항</a></li>
+                            <li><a href="#">이벤트</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </header>
-        <content id="container">
+        <section id="container">
             <!-- MAIN BANNER -->
             <div class="banner">
                 <button type="button" class="btn_prev"><span class="screen_out">이전</span></button>
@@ -1641,7 +1637,7 @@
             </div>
 
             <!-- DREAM FACTORY BANNER -->
-            <div class="dream_factory">
+            <article class="dream_factory">
                 <div class="dream_factory_text">
                     <em>DREAM FACTORY</em>
                     <p class="bold">EDIYA COFFEE</p>
@@ -1650,10 +1646,10 @@
                     <button type="button"><a href="#">드림 물류센터</a></button>
                 </div>
                 <div class="dream_img"><img src="img/dream_factory.png" alt="드림팩토리 건물 이미지"></div>
-            </div>
+            </article>
 
             <!-- MENU BANNER -->
-            <div class="menu_banner">
+            <article class="menu_banner">
                 <p>ALWAYS BESIDE YOU, <span class="bold">EDIYA COFFEE</span></p>
                 <div class="line"></div>
                 <p>늘 당신 곁에, 이디야 커피의 다양한 메뉴를 맛보세요.</p>
@@ -1669,20 +1665,20 @@
                     <img src="img/ani_object02_03.png" alt="">
                     <img src="img/ani_object02_02.png" alt="">
                 </div>
-            </div>
+            </article>
 
             <!-- FRANCHISE BANNER -->
-            <div class="franchise">
+            <article class="franchise">
                 <div class="franchise_info">
                     <p>고객과 가맹점주, 협력사의 상생의 가치를 실천합니다.</p>
                     <p>해외에 로열티를 내지 않는 순수한 국내브랜드로 품질좋고 맛있는 정직한 커피를 제공합니다.</p>
                     <button><a href="#">가맹안내</a></button>
                     <button><a href="#">브랜드소개</a></button>
                 </div>
-            </div>
+            </article>
 
             <!-- CULTURE LAB BANNER -->
-            <div class="culture_lab">
+            <article class="culture_lab">
                 <p>EDIYA <span class="bold">CULTURE LAB</span></p>
                 <P>커피를 더 특별하게 만드는 문화가 시작되는 공간</P>
                 <div class="culture_lab_line"></div>
@@ -1706,10 +1702,10 @@
                         </a>
                     </li>
                 </ul>
-            </div>
+            </article>
 
             <!-- COFFEE LAB BANNER -->
-            <div class="coffee_lab">
+            <article class="coffee_lab">
                 <p>EDIYA <span class="bold">COFFEE LAB</span></p>
                 <P>최고의 커피를 향한 끊임없는 노력, 이디야커피연구소</P>
                 <div class="line"></div>
@@ -1725,10 +1721,10 @@
                         <div class="coffee_lab_line"></div>
                     </div>
                 </div>
-            </div>
+            </article>
 
             <!-- INFO BANNER -->
-            <div class="info">
+            <article class="info">
                 <div class="franchise_open">
                     <p class="title">가맹점 개설 안내</p>
                     <div class="line"></div>
@@ -1761,11 +1757,10 @@
                         <img src="img/main_brochure_img.png" alt="">
                     </a>
                 </div>
-            </div>
-
+            </article>
 
             <!-- SNS BANNER -->
-            <div class="sns">
+            <article class="sns">
                 <p>EDIYA COFFEE SNS</p>
                 <div class="line"></div>
                 <p>Coffee moment with EDIYA</p>
@@ -1778,8 +1773,8 @@
                         };
                     </script>
                 </ul>
-            </div>
-        </content>
+            </article>
+        </section>
 
         <!-- FOOTER -->
         <footer id="footer">
