--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" media="screen and (max-width: 1180px)" href="css/main_header_pad.css">
     <link rel="stylesheet" media="screen and (min-width: 641px) and (max-width: 980px)" href="css/main_pad.css">
-    <link rel="stylesheet" media="screen and (min-width: 370px) and (max-width: 640px)" href="css/main_mobile.css">
-    
+    <link rel="stylesheet" media="screen and (max-width: 640px)" href="css/main_mobile.css">
+
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
@@ -33,6 +33,12 @@
                 <li><a href="#">브랜드 사이트</a></li>
                 <li><a href="#">기업 사이트</a></li>
             </ul>
+            <h1 class="screen_out">메인 로고</h1>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="img/top_logo.gif" alt="logo">
+                </a>
+            </div>
             <div class="top_wrap selTo">
                 <div class="top_right selTo ">
                     <ul>
@@ -41,10 +47,10 @@
                         <li><a href="map.html">매장찾기</a></li>
                     </ul>
                     <ul>
-                        <li><a href="#"><img src="img/top_sns01.gif" alt="blog"></a></li>
-                        <li><a href="#"><img src="img/top_sns02.gif" alt="instagram"></a></li>
-                        <li><a href="#"><img src="img/top_sns03.gif" alt="facebook"></a></li>
-                        <li><a href="#"><img src="img/top_sns04.gif" alt="youtube"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
                         <li>
                             <select name="language" id="">
                                 <option value="korean">Korean</option>
@@ -54,55 +60,50 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div class="nav selTo ">
-                <h1 class="screen_out">메인 로고</h1>
-                <div class="logo">
-                    <a href="index.html">
-                        <img src="img/top_logo.gif" alt="logo">
-                    </a>
+                <div class="nav selTo ">
+
+                    <!-- GNB MENU -->
+                    <ul class="gnb selTo ">
+                        <h2 class="screen_out">이디야 메인 메뉴</h2>
+                        <li class="menu_title"><a href="#"><span>메뉴</span></a>
+                            <ul>
+                                <li><a href="#">음료</a></li>
+                                <li><a href="bakery.html">베이커리</a></li>
+                                <li><a href="#">이디야 스낵</a></li>
+                                <li><a href="#">MD</a></li>
+                                <li><a href="#">비니스트</a></li>
+                                <li><a href="bean.html">원두</a></li>
+                            </ul>
+                        </li>
+                        <li class="menu_title"><a href="#"><span>이디야멤버스</span></a>
+                            <ul>
+                                <li><a href="#">멤버스 소개</a></li>
+                                <li><a href="#">이디야카드</a></li>
+                                <li><a href="#">선물하기</a></li>
+                                <li><a href="#">이디야오더</a></li>
+                                <li><a href="#">FAQ</a></li>
+                            </ul>
+                        </li>
+                        <li class="menu_title"><a href="#"><span>이디야커피랩</span></a>
+                            <ul>
+                                <li><a href="#">이디야커피랩</a></li>
+                                <li><a href="#">이디야커피랩 메뉴</a></li>
+                            </ul>
+                        </li>
+                        <li class="menu_title"><a href="#"><span>이디야컬쳐랩</span></a>
+                            <ul>
+                                <li><a href="musicfesta.html">뮤직페스타</a></li>
+                                <li><a href="#">프로그램 및 시설 안내</a></li>
+                            </ul>
+                        </li>
+                        <li class="menu_title"><a href="#"><span>이디야 소식</span></a>
+                            <ul>
+                                <li><a href="#">공지사항</a></li>
+                                <li><a href="#">이벤트</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
-                <!-- GNB MENU -->
-                <ul class="gnb selTo ">
-                    <h2 class="screen_out">이디야 메인 메뉴</h2>
-                    <li class="menu_title"><a href="#"><span>메뉴</span></a>
-                        <ul>
-                            <li><a href="#">음료</a></li>
-                            <li><a href="bakery.html">베이커리</a></li>
-                            <li><a href="#">이디야 스낵</a></li>
-                            <li><a href="#">MD</a></li>
-                            <li><a href="#">비니스트</a></li>
-                            <li><a href="bean.html">원두</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu_title"><a href="#"><span>이디야멤버스</span></a>
-                        <ul>
-                            <li><a href="#">멤버스 소개</a></li>
-                            <li><a href="#">이디야카드</a></li>
-                            <li><a href="#">선물하기</a></li>
-                            <li><a href="#">이디야오더</a></li>
-                            <li><a href="#">FAQ</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu_title"><a href="#"><span>이디야커피랩</span></a>
-                        <ul>
-                            <li><a href="#">이디야커피랩</a></li>
-                            <li><a href="#">이디야커피랩 메뉴</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu_title"><a href="#"><span>이디야컬쳐랩</span></a>
-                        <ul>
-                            <li><a href="musicfesta.html">뮤직페스타</a></li>
-                            <li><a href="#">프로그램 및 시설 안내</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu_title"><a href="#"><span>이디야 소식</span></a>
-                        <ul>
-                            <li><a href="#">공지사항</a></li>
-                            <li><a href="#">이벤트</a></li>
-                        </ul>
-                    </li>
-                </ul>
             </div>
         </header>
         <section id="container">
@@ -295,7 +296,7 @@
 
     function realScrollWork() {
         console.log(html.scrollTop);
-        if (html.scrollTop > 47) {
+        if (html.scrollTop > 50) {
             nav.classList.add('fix');
         } else {
             nav.classList.remove('fix');
@@ -304,7 +305,7 @@
 
     function scrollWork() {
         clearTimeout(start);
-        start = setTimeout(realScrollWork, 150)
+        start = setTimeout(realScrollWork, 10)
     }
 
     // 메인 슬라이더 관련
