토글메뉴 모바일 패드에서 위치 수정 및 코드 정리

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <ul>
                         <li><a href="#">로그인</a></li>
                         <li><a href="#">회원가입</a></li>
-                        <li><a href="map.html">매장찾기</a></li>
+                        <li><a href="map.html" class="toggle_store">매장찾기</a></li>
                     </ul>
                     <ul>
                         <li><a href="#"></a></li>
